data/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Annual_Utility_Costs__c</fullName>
        <label>Annual Utility Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Term__c</fullName>
        <description>Previously Billable Term</description>
        <label>Billable Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Quote__c</fullName>
        <description>The date when a Quote is presented to the client.</description>
        <inlineHelpText>The date when a Quote is presented to the client.</inlineHelpText>
        <label>Date of Quote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECAP_Fee_Payments__c</fullName>
        <label># ECAP Fee Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECAP_Fee__c</fullName>
        <label>ECAP Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_Employed_By__c</fullName>
        <label>ES Employed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Cenergistic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ES_Estimated_Salary_Annual__c</fullName>
        <label>ES Estimated Salary Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_Estimated_Salary_Monthly__c</fullName>
        <formula>ES_Estimated_Salary_Annual__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Estimated Salary Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_FT__c</fullName>
        <label># ES FT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_PT__c</fullName>
        <label># ES PT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Annual_Fee__c</fullName>
        <formula>Estimated_Net_Monthly_Fee__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Net Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Monthly_Fee__c</fullName>
        <label>Estimated Net Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Annual_Allocation__c</fullName>
        <label>Executive Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Utilized__c</fullName>
        <label>Executive Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Fixed-ES</fullName>
                </value>
                <value>
                    <fullName>Var Fixed</fullName>
                </value>
                <value>
                    <fullName>Var Fixed-ES</fullName>
                </value>
                <value>
                    <fullName>Split Fee</fullName>
                </value>
                <value>
                    <fullName>Performance Fee</fullName>
                </value>
                <value>
                    <fullName>Turnkey</fullName>
                </value>
                <value>
                    <fullName>Turnkey-R</fullName>
                </value>
                <value>
                    <fullName>Turnkey-S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Annual_Fee__c</fullName>
        <label>Fixed Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GreenX_Annual_Allocation__c</fullName>
        <label>GreenX Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GreenX_Utilized__c</fullName>
        <label>GreenX Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY1__c</fullName>
        <label>Gross Monthly Fee PY1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY2__c</fullName>
        <label>Gross Monthly Fee PY2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY3__c</fullName>
        <label>Gross Monthly Fee PY3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matrix_Cost_Per_Visit__c</fullName>
        <label>Matrix Cost Per Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matrix_Utility_Spend__c</fullName>
        <label>Matrix Utility Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Measure_Annual_Allocation__c</fullName>
        <label>Measure Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Measure_Utilized__c</fullName>
        <label>Measure Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Contract_Value__c</fullName>
        <label>Net Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Fee_PY1__c</fullName>
        <label>Net Monthly Fee PY1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Fee_PY2__c</fullName>
        <label>Net Monthly Fee PY2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Fee_PY3__c</fullName>
        <label>Net Monthly Fee PY3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contracts_Gross_Annual_Fee__c</fullName>
        <label>New Contracts Gross Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contracts_Gross_Monthly_Fee__c</fullName>
        <label>New Contracts Gross Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Discount_Amount__c</fullName>
        <label>Opportunity Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Discount_Percent__c</fullName>
        <label>Opportunity Discount (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Perf_Fee__c</fullName>
        <label>Perf Fee %</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Total_Gross_Savings__c</fullName>
        <label>Proposal Total Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Total_Net_Savings__c</fullName>
        <label>Proposal Total Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QS_Months__c</fullName>
        <label>QS Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QS_Net_Savings__c</fullName>
        <label>QS Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QS_Type__c</fullName>
        <description>Previously QS Type</description>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Billing</fullName>
                </value>
                <value>
                    <fullName>Shorten Billing</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Renewal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Savings_Percent__c</fullName>
        <label>Savings %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SharePoint_Path__c</fullName>
        <formula>Opportunity.SharePoint_Path__c+&quot;/&quot;+&quot;quote&quot;+&quot;/&quot;+ Name +&quot;_&quot;+ QuoteNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SharePoint Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simulate_Annual_Allocation__c</fullName>
        <label>Simulate Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Simulate_Utilized__c</fullName>
        <label>Simulate Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Type__c</fullName>
        <label>Software Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Measure</fullName>
                    <default>true</default>
                    <label>Measure</label>
                </value>
                <value>
                    <fullName>ECAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONV-Renewal</fullName>
                </value>
                <value>
                    <fullName>No Fee +</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <description>Previously Term Months</description>
        <label>Contract Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conservation Program</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visits_Per_Month__c</fullName>
        <label>Visits Per Month</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_10_Gross_Savings__c</fullName>
        <label>Year 10 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_10_Net_Savings__c</fullName>
        <label>Year 10 Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Gross_Savings__c</fullName>
        <label>Year 1 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Net_Savings__c</fullName>
        <label>Year 1 Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Gross_Savings__c</fullName>
        <label>Year 2 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Savings__c</fullName>
        <label>Year 2 Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aiesync__Easy_Synced__c</fullName>
        <formula>Id=Opportunity.aiesync__Easy_Sync_Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Easy Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aiesync__TestCustomField_Q__c</fullName>
        <label>TestCustomField_Q</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>aiesync__Easy_Synced__c</columns>
        <columns>Visits_Per_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>aiesync__Easy_Synced__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>